[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# see https://github.com/phil-opp/blog_os/issues/1066
bootloader = "0.9.20"
x86_64 = "0.14.9"
volatile = "0.2.6"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"